# inno

./: CMakeLists.txt  README.md
cmake/: GenerateShaderCPPFile.cmake  ShaderCompile.cmake
engine/: CMakeLists.txt
engine/shader/: CMakeLists.txt
engine/shader/glsl/: axis.frag  basic.frag  basic.vert  canvas.vert  plain.frag  plain.vert  scene.vert
engine/shader/include/: constants.h
engine/source/: common.h
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: editor.h  editor_global_context.h
engine/source/editor/source/: editor.cpp  editor_global_context.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: hash.h  macro.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: vec3.h
engine/source/runtime/function/framework/component/: component.h
engine/source/runtime/function/framework/object/: object.cpp  object.h  object_id_allocator.cpp  object_id_allocator.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/ray/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h
engine/source/runtime/function/render/: render_common.h  render_object.h  render_pass_base.cpp  render_pass_base.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.h  render_resource_base.h  render_scene.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_buffer.h  debug_draw_context.h  debug_draw_group.h  debug_draw_manager.h  debug_draw_pipeline.h  debug_draw_primitive.h
engine/source/runtime/function/render/ingdraw/: ing_draw_context.cpp  ing_draw_context.h  ing_draw_group.cpp  ing_draw_group.h  ing_draw_manager.cpp  ing_draw_manager.h  ing_draw_pipeline.cpp  ing_draw_pipeline.h  ing_draw_primitive.cpp  ing_draw_primitive.h
engine/source/runtime/function/render/interface/: rhi.h  rhi_struct.h
engine/source/runtime/function/render/interface/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_resource.h  vulkan_util.cpp  vulkan_util.h  vulkan_vma.cpp
engine/source/runtime/function/ui/: window_ui.h
engine/source/runtime/resource/asset_manager/: asset_manager.h
scripts/: compile_shaders.ps1
